# amscrapper-rs

./: Cargo.toml  README.md
src/: core.rs  ffi.rs  lib.rs  main.rs  main.rs.old  music.rs  scrapper.rs  spotifyscrapper.rs  utils.rs
