[package]
name = "amscrapper-rs"
version = "0.1.0"
edition = "2024"
[lib]
crate-type = ["staticlib", "cdylib"]
bench = false

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.release]
opt-level = 3
overflow-checks = false

[dependencies]
uiautomation = "0.17.1"
regex = "1.11.1"
winvd = "0.0.48"
serde_json = "1.0.140"
serde = { version = "1.0.140", features = ["derive"] }
anyhow = "1.0.97"
once_cell = "1.21.1"

[dependencies.windows]
version = "0.58"
features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"]
