
[package]
name = "amscrapper-rs"
version = "0.1.5"
edition = "2024"
authors = ["Hironichu"]
description = "Scrap and gather information from the AppleMusic windows application"
license = "Apache-2.0"
repository = "https://github.com/hironichu/amscrapper-rs"
readme = "README.md"
keywords = ["apple", "music", "scraper", "windows"]
categories = ["development-tools"]
include = ["**/*.rs", "Cargo.toml"]

[lib]
crate-type = ["staticlib", "rlib"]
bench = false

# [[lib]]
# name = "amscrapper_rs_ffi"
# crate-type = ["cdylib"]
# bench = false

[profile.dev]
opt-level = 1
overflow-checks = false
incremental = true      # Compile your binary in smaller steps.
[profile.release]
opt-level = 3
overflow-checks = false

[dependencies]
uiautomation = "0.17.1"
regex = "1.11.1"
winvd = "0.0.48"
serde_json = "1.0.140"
serde = { version = "1.0.140", features = ["derive"] }
anyhow = "1.0.97"
once_cell = "1.21.1"

[dependencies.windows]
version = "0.58"
features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"]
